--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -91,14 +91,51 @@
     box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
+
 .driversBlock_driverCard:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.25);
 }
 .driversBlock_carImage{
+    position: relative;
     width: 280px;
     height: 210px;
     background-color: red;
     border-radius: 5px 5px 0 0;
+}
+
+.driversBlock_carImage:hover .driversBlock_carBlackout{
+    display: block;
+    cursor: pointer;
+}
+.driversBlock_carBlackout{
+    position: absolute;
+    display: none;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 20;
+}
+.driversBlock_carBlackout_detailed{
+    width: 50%;
+  height: 30%;
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  text-align: center;
+    color: #fff;
+    font-size: 18px;
+}
+.driversBlock_carImage::after{
+    position: absolute;
+    width: 280px;
+    height: 210px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.driversBlock_carImage::after:hover{
+    display: block;
 }
 .driverBlock_driverInfoBlock{
     padding: 0 10px;
@@ -115,6 +152,9 @@
     font-weight: 500;
     line-height: 16px;
 }
+.driversBlock_carName:hover{
+    color: #ff6600;
+}
 .driverBlock_carInfoLine{
     padding-top: 10px;
     padding-bottom: 15px;
@@ -125,25 +165,26 @@
 }
 .driversBlock_buttonStyle{
     padding: 0;
-    height: 40px;
+    height: 50px;
     background: #304269;
     color:#fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
     font-size: 16px;
     font-weight: 500;
+    cursor: pointer;
 }
 .driversBlock_buttonStyle:hover{
     background-color: #ff6600;
 }
 .driversBlock_driverCard_carIcon{
-    width: 26px;
-    height: 18px;
+    width: 33px;
+    height: 28px;
     margin-right: 5px;
 }
 .driversBlock_carInfoLine_value{
     font-size: 14px;
-    line-height: 14px;
+    line-height: 22px;
     font-weight: 400;
     padding-top: 4px;
     color: #304269;
@@ -155,13 +196,14 @@
 }
 .driversBlock_driverCard_driverInfo{
     padding-left: 8px;
-    padding-top: 13px;
+    padding-top: 8px;
 }
 .driversBlock_driversInfo_name{
     font-size: 16px;
     line-height: 16px;
     color: #304269;
     font-weight: 500;
+    cursor: pointer;
 }
 .driversBlock_driversInfo_name:hover{
     color: #ff6600
@@ -177,9 +219,36 @@
     border-radius: 7px;
 }
 .driversBlock_bookmark{
+    position: relative;
     height: 32px;
     width: 24px;
     margin-left: auto;
     margin-top: 15px;
     margin-right: 15px;
+    z-index: 50;
+
+    background: url('./pictures/bookmark_white.svg') no-repeat;
+    background-size: "24px 32px";
+    cursor: pointer;
+}
+.driversBlock_bookmark:hover{
+    background: url('./pictures/bookmark_orange.svg') no-repeat;
+    background-size: "24px 32px"
+}
+.driversBlock_bookmark:hover .driversBlock_bookmark_tooltip{
+    display: block;
+}
+.driversBlock_bookmark_tooltip{
+    position: absolute;
+    display: none;
+    top: -40px;
+    height: 30px;
+    width: 150px;
+    left: -63px;/*=*/
+    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    background-color: #fff;
+    text-align: center;
+    font-size: 14px;
+    line-height: 30px;
 }
