--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -1,11 +1,12 @@
-.driverProfileNavigationBody{
+.driverProfileNavigationBody {
     line-height: 40px;
     margin-top: 40px;
-    margin-bottom: 30px; /* нужно будет удалить */
+    margin-bottom: 30px;
+    /* нужно будет удалить */
     border-bottom: 1px solid #ccc;
 }
 
-.driverProfileNavigationBody p{
+.driverProfileNavigationBody p {
     cursor: pointer;
     height: 40px;
     margin-right: 30px;
@@ -16,7 +17,12 @@
     color: #304269;
 }
 
-.driverProfileNavigationBody p:hover{
+.driverProfileNavigationBody p:hover {
     color: #f60;
     border-bottom: 3px solid #f60;
+}
+
+.driverProfileNavigationBodyActive {
+    color: #f60 !important;
+    border-bottom: 3px solid #f60 !important;
 }
