--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -104,29 +104,33 @@
 }
 
 .driversBlock_carImage:hover .driversBlock_carBlackout{
-    display: block;
     cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.driversBlock_carImage:hover .driversBlock_carBlackout_detailed{
+    color: #fff;
 }
 .driversBlock_carBlackout{
     position: absolute;
-    display: none;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    /*color: transparent;*/
+    background-color: rgba(0, 0, 0, 0);
     z-index: 20;
+    transition: 0.3s all;
 }
 .driversBlock_carBlackout_detailed{
-    width: 50%;
+  width: 50%;
   height: 30%;
   overflow: auto;
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
   text-align: center;
-    color: #fff;
-    font-size: 18px;
+  color: transparent;
+  font-size: 18px;
 }
 .driversBlock_carImage::after{
     position: absolute;
