--- a/src/components/driverProfileRegistration/DriverProfileRegistration.css
+++ b/src/components/driverProfileRegistration/DriverProfileRegistration.css
@@ -1,4 +1,13 @@
-.driverProfileRegistrationWrapper{
+.driverProfileRegistrationWrapper {
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.driverProfileRegistrationCommercial {
+    margin-top: 80px;
+    margin-bottom: 30px;
+}
+
+.driverProfileRegistrationCommercial .drivers_commercial {
+    padding: 60px 0;
 }
