--- a/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
+++ b/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
@@ -1,7 +1,7 @@
 .drivers_commercial{
   padding: 85px 0;
   border-radius: 5px;
-  width: 290px;
+  width: 100%;
   box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
 }
 .commercial_picture{
@@ -14,6 +14,8 @@
 .picture2{
   height: 400px; 
 }
+/*
 @media (max-width: 1200px){
   .commercial_picture {width: 90%}
 }
+*/
