--- a/src/components/drivers/DriversRoute/DriversChangeRoute.css
+++ b/src/components/drivers/DriversRoute/DriversChangeRoute.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: row;
   color:#ffffff;
-  font-family: "Roboto";
+  ;
   font-weight: 400;
   font-size: 12px;
   margin-bottom: 35px;
