--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -28,19 +28,20 @@
 }
 
 .logoBlue {
-    width: 240px;
+    width: 100%;
     height: 30px;
-    margin-right: 20px;
     background: url(./pictures/logo_blue.svg);
-    background-size: 240px 30px;
+    background-size: 100% 100%;
+    background-position: left 0px;
 }
 
 .logoWhite {
-    width: 240px;
+    position: relative;
+    width: 100%;
     height: 30px;
-    margin-right: 20px;
     background: url(./pictures/logo_white.svg) no-repeat;
-    background-size: 240px 30px;
+    background-size: 100% 100%;
+    background-position: top left;
 }
 
 .headerLogo img {
